--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.2",
+    "fs": "0.0.1-security",
+    "isomorphic-unfetch": "^4.0.2",
+    "mailchimp-api-v3": "^1.15.0",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
